name:              konnfav
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Hiromi ISHII
maintainer:        Hiromi ISHII
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://konnfav.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

executable         konnfav-test
    if flag(production)
        Buildable: False
    main-is:       test.hs
    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.7     && < 0.8
                 , yesod-auth
                 , yesod-static
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-sqlite
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
                 , old-locale
                 , aeson
                 , time
                 , authenticate
    ghc-options:   -Wall -threaded

executable         konnfav-production
    if flag(production)
        Buildable: True
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       production.hs
    ghc-options:   -Wall -threaded

executable         konnfav-devel
    if flag(production)
        Buildable: False
    main-is:       devel-server.hs
    ghc-options:   -Wall -O2 -threaded

executable Crawler
  main-is: Crawler.hs
  ghc-options: -Wall -O2 -threaded
  build-depends: random, monad-peel, attoparsec, attoparsec-enumerator, http-enumerator, enumerator